# payment-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TASK.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_create_payments_and_outbox.py
app/: __init__.py  main.py  serializers.py  settings.py
app/api/: __init__.py  dependencies.py
app/api/routes/: payments.py
app/broker/: __init__.py  publisher.py  topology.py
app/db/: __init__.py  session.py
app/models/: __init__.py  enums.py  outbox.py  payment.py
app/outbox/: __init__.py  publisher.py
app/repositories/: __init__.py  outbox.py  payments.py
app/schemas/: __init__.py  events.py  payment.py  webhook.py
app/services/: __init__.py  gateway.py  payments.py  webhooks.py
app/workers/: payment_consumer.py
tests/: conftest.py  test_architecture.py  test_assignment_regressions.py  test_consumer.py  test_outbox_publisher.py  test_payments_api.py  test_webhooks.py
