[project]
name = "payment-service"
version = "0.1.0"
description = "Asynchronous payment processing service"
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.4.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "fastapi>=0.111.0",
    "faststream[cli,rabbit]>=0.5.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
test = [
    "aiosqlite>=0.20.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

